add get message by hash interface
